[gd_scene load_steps=14 format=3 uid="uid://i4w0wfav04yb"]

[ext_resource type="Script" path="res://Scripts/Tuc_PunchOut.gd" id="1_vc1ja"]
[ext_resource type="ArrayMesh" uid="uid://cls5a2kt5gvs7" path="res://Assets/Tuc/tuc.obj" id="2_4defw"]
[ext_resource type="Shader" path="res://Assets/Tuc/tucShader.gdshader" id="3_a7daj"]
[ext_resource type="ArrayMesh" uid="uid://cw7ajrjp1dfl7" path="res://Assets/Tuc/bandana.obj" id="3_svoyr"]
[ext_resource type="ArrayMesh" uid="uid://ccfyyiachxmwy" path="res://Assets/Tuc/coquille.obj" id="4_j1k2b"]
[ext_resource type="Shader" path="res://Assets/Tuc/bandanaShader.gdshader" id="5_7crsv"]
[ext_resource type="Shader" path="res://Assets/Tuc/coquilleShader.gdshader" id="7_2r0fv"]
[ext_resource type="PackedScene" uid="uid://5hbumitsbfpw" path="res://Assets/Glass/Glass_OK.tscn" id="8_dwtgq"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rke6i"]
render_priority = 0
shader = ExtResource("3_a7daj")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_c3wg2"]
render_priority = 0
shader = ExtResource("5_7crsv")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bq831"]
render_priority = 0
shader = ExtResource("7_2r0fv")

[sub_resource type="BoxShape3D" id="BoxShape3D_xlida"]
size = Vector3(0.623951, 1.5, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_fde4e"]
resource_local_to_scene = true
blend_mode = 1
depth_draw_mode = 2
albedo_color = Color(1, 1, 1, 0.00392157)
metallic_specular = 0.99
roughness = 0.0
emission_energy_multiplier = 11.87
refraction_enabled = true
detail_blend_mode = 3
detail_uv_layer = 1
grow = true

[node name="Tuc_PunchOut" type="Area3D"]
collision_layer = 3
collision_mask = 3
script = ExtResource("1_vc1ja")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 1, 0)
mesh = ExtResource("2_4defw")
surface_material_override/0 = SubResource("ShaderMaterial_rke6i")

[node name="Bandana" type="MeshInstance3D" parent="MeshInstance3D"]
mesh = ExtResource("3_svoyr")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("ShaderMaterial_c3wg2")

[node name="Coquille" type="MeshInstance3D" parent="MeshInstance3D"]
mesh = ExtResource("4_j1k2b")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("ShaderMaterial_bq831")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0.354346, 1.46192, 0)
shape = SubResource("BoxShape3D_xlida")

[node name="GlassStl" parent="." instance=ExtResource("8_dwtgq")]
visible = false
surface_material_override/0 = SubResource("StandardMaterial3D_fde4e")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
